--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -13,7 +13,7 @@
             <div class="hidden md:flex items-center space-x-8">
                 <a href="/doctors" class="text-black hover:text-primary-200 transition-colors">Doctors</a>
                 <a href="/hospitals" class="text-black hover:text-primary-200 transition-colors">Hospitals</a>
-                <a href="/forms" class="text-black hover:text-primary-200 transition-colors">Forms</a>
+                <a href="/login" class="text-black hover:text-primary-200 transition-colors">login</a>
             </div>
 
             <div class="md:hidden">
