--- a/views/contact/index.ejs
+++ b/views/contact/index.ejs
@@ -70,7 +70,7 @@
                 Send us a message
             </h2>
             <div class="mt-9">
-                <form action="#" method="POST" class="grid grid-cols-1 gap-y-6">
+                <form action="/contact" method="POST" class="grid grid-cols-1 gap-y-6">
                     <div>
                         <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
                         <div class="mt-1">
@@ -78,9 +78,10 @@
                         </div>
                     </div>
                     <div>
-                        <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
+                        <label for="contact-info" class="block text-sm font-medium text-gray-700">Contact info</label>
+                        <p>Enter phone number or email address</p>
                         <div class="mt-1">
-                            <input type="email" name="email" id="email" autocomplete="email" class="block w-full shadow-sm sm:text-sm focus:ring-primary-500 focus:border-primary-500 border-gray-300 rounded-md">
+                            <input type="text" name="contact_info" id="contact_info" autocomplete="on" placeholder="Phone number or email address" class="block w-full shadow-sm sm:text-sm focus:ring-primary-500 focus:border-primary-500 border-gray-300 rounded-md">
                         </div>
                     </div>
                     <div>
@@ -90,7 +91,7 @@
                         </div>
                     </div>
                     <div>
-                        <button type="submit" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-primary-600 hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500">
+                        <button type="submit" class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-black hover:bg-gray-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
                             Send Message
                         </button>
                     </div>
