--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -18,8 +18,8 @@
             <div>
                 <h3 class="text-lg font-semibold mb-4">Resources</h3>
                 <ul class="space-y-2">
-                    <li><a href="#" class="text-gray-400 hover:text-white">About Us</a></li>
-                    <li><a href="#" class="text-gray-400 hover:text-white">Contact</a></li>
+                    <li><a href="/about" class="text-gray-400 hover:text-white">About Us</a></li>
+                    <li><a href="/contact" class="text-gray-400 hover:text-white">Contact</a></li>
                     <li><a href="#" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
                 </ul>
             </div>
@@ -34,9 +34,9 @@
                         </svg>
                     </a>
                     <a href="#" class="text-gray-400 hover:text-white">
-                        <span class="sr-only">Twitter</span>
+                        <span class="sr-only">WhatsApp</span>
                         <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
-                            <path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"/>
+                            <path d="M20.52 3.48A11.78 11.78 0 0 0 12 0a11.78 11.78 0 0 0-8.52 3.48A11.78 11.78 0 0 0 0 12c0 2.09.54 4.14 1.56 5.94L0 24l6.24-1.62A11.78 11.78 0 0 0 12 24a11.78 11.78 0 0 0 8.52-3.48A11.78 11.78 0 0 0 24 12a11.78 11.78 0 0 0-3.48-8.52zM12 21.54c-1.8 0-3.54-.48-5.04-1.38l-.36-.21-3.72.96.99-3.63-.24-.36A9.54 9.54 0 0 1 2.46 12c0-5.28 4.26-9.54 9.54-9.54 2.55 0 4.95.99 6.75 2.79a9.54 9.54 0 0 1 2.79 6.75c0 5.28-4.26 9.54-9.54 9.54zm5.4-7.14c-.3-.15-1.8-.9-2.07-1.02-.27-.12-.48-.15-.69.15-.21.3-.78 1.02-.96 1.23-.18.21-.36.24-.66.09-.3-.15-1.26-.48-2.4-1.53-.9-.81-1.5-1.8-1.68-2.1-.18-.3-.02-.45.12-.6.12-.12.3-.33.45-.51.15-.18.18-.3.27-.48.09-.18.03-.36-.03-.51-.06-.15-.69-1.65-.96-2.28-.24-.57-.48-.48-.69-.48h-.57c-.18 0-.45.06-.69.33-.24.27-.9.87-.9 2.1s.93 2.43 1.05 2.61c.12.18 1.83 2.79 4.44 3.9.63.27 1.12.42 1.5.54.63.21 1.2.18 1.65.12.51-.06 1.8-.72 2.07-1.41.27-.69.27-1.29.18-1.41-.09-.12-.27-.18-.57-.33z"/>
                         </svg>
                     </a>
                     <a href="#" class="text-gray-400 hover:text-white">
