--- a/views/hospitals/requests.ejs
+++ b/views/hospitals/requests.ejs
@@ -14,40 +14,24 @@
                         <table class="min-w-full divide-y divide-gray-200">
                             <thead class="bg-gray-50">
                                 <tr>
-                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                        Hospital
-                                    </th>
-                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                        Requestor
-                                    </th>
-                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                        Contact
-                                    </th>
-                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                        Status
-                                    </th>
-                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                        Actions
-                                    </th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Hospital</th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Requestor</th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Contact</th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Status</th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Actions</th>
                                 </tr>
                             </thead>
                             <tbody class="bg-white divide-y divide-gray-200">
                                 <% hospitalUsers.forEach(user => { %>
                                     <tr>
                                         <td class="px-6 py-4 whitespace-nowrap">
-                                            <div class="text-sm font-medium text-gray-900">
-                                                <%= user.hospital.name %>
-                                            </div>
+                                            <div class="text-sm font-medium text-gray-900"><%= user.hospital.name %></div>
                                         </td>
                                         <td class="px-6 py-4 whitespace-nowrap">
-                                            <div class="text-sm text-gray-900">
-                                                <%= user.user.first_name %> <%= user.user.last_name %>
-                                            </div>
+                                            <div class="text-sm text-gray-900"><%= user.user.first_name %> <%= user.user.last_name %></div>
                                         </td>
                                         <td class="px-6 py-4 whitespace-nowrap">
-                                            <div class="text-sm text-gray-900">
-                                                <%= user.user.email %>
-                                            </div>
+                                            <div class="text-sm text-gray-900"><%= user.user.email %></div>
                                         </td>
                                         <td class="px-6 py-4 whitespace-nowrap">
                                             <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full 
@@ -64,12 +48,24 @@
                                                         Accept
                                                     </button>
                                                 </form>
-                                                <form action="/hospitals/requests/<%= user.id %>/reject" method="POST" class="inline"></form>
+                                                <form action="/hospitals/requests/<%= user.id %>/reject" method="POST" class="inline">
                                                     <button type="submit" class="text-red-600 hover:text-red-900">
                                                         Reject
                                                     </button>
                                                 </form>
-                                            <% } %></button>
+                                            <% } else if (user.status === 'accept') { %>
+                                                <form action="/hospitals/requests/<%= user.id %>/reject" method="POST" class="inline">
+                                                    <button type="submit" class="text-red-600 hover:text-red-900">
+                                                        Reject
+                                                    </button>
+                                                </form>
+                                            <% } else if (user.status === 'reject') { %>
+                                                <form action="/hospitals/requests/<%= user.id %>/accept" method="POST" class="inline">
+                                                    <button type="submit" class="text-green-600 hover:text-green-900">
+                                                        Accept
+                                                    </button>
+                                                </form>
+                                            <% } %>
                                         </td>
                                     </tr>
                                 <% }); %>
