simple design issues
fixed navbar covering the page, and better design with the doctors and hospitals

--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -11,7 +11,7 @@
 
 
 </head>
-<body class="min-h-screen bg-gray-50">
+<body class="min-h-screen bg-gray-50 pt-10">
     <% // Set the current path for active nav highlighting  
      let currentPath = '';
      if (typeof req !== 'undefined') {
