--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -11,7 +11,7 @@
                 <ul class="space-y-2">
                     <li><a href="/doctors" class="text-gray-400 hover:text-white">Find Doctors</a></li>
                     <li><a href="/hospitals" class="text-gray-400 hover:text-white">Find Hospitals</a></li>
-                    <li><a href="/forms" class="text-gray-400 hover:text-white">Medical Forms</a></li>
+                    <li><a href="/terms" class="text-gray-400 hover:text-white">terms</a></li>
                 </ul>
             </div>
             
@@ -20,7 +20,7 @@
                 <ul class="space-y-2">
                     <li><a href="/about" class="text-gray-400 hover:text-white">About Us</a></li>
                     <li><a href="/contact" class="text-gray-400 hover:text-white">Contact</a></li>
-                    <li><a href="#" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+                    <li><a href="/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
                 </ul>
             </div>
             
